# sandbox

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .typos.toml  Cargo.toml  Makefile  README.md  compose.yaml  deny.toml  protocol.http
.github/workflows/: regression.yml  stress.yml
configs/: minimal.toml  protocol-server.toml  strict.toml
crates/sandbox-cgroup/: Cargo.toml
crates/sandbox-cgroup/src/: lib.rs
crates/sandbox-cli/: Cargo.toml
crates/sandbox-cli/src/: main.rs
crates/sandbox-config/: Cargo.toml
crates/sandbox-config/src/: lib.rs
crates/sandbox-core/: Cargo.toml
crates/sandbox-core/src/: error.rs  lib.rs  limits.rs  result.rs
crates/sandbox-mount/: Cargo.toml
crates/sandbox-mount/src/: lib.rs
crates/sandbox-protocol/: Cargo.toml
crates/sandbox-protocol/src/: lib.rs
crates/sandbox-seccomp/: Cargo.toml
crates/sandbox-seccomp/src/: lib.rs
crates/sandbox-supervisor/: Cargo.toml
crates/sandbox-supervisor/src/: lib.rs
crates/sandbox-testkit/: Cargo.toml
crates/sandbox-testkit/src/: lib.rs
docker/: dev.Dockerfile  prod.Dockerfile
docs/: architecture.md  ioi_isolate_sandbox_summary.md  isolate.md  isolate.txt  malicious_sample_catalog.md  next.md  protocol_module_implementation_plan.md  rust_sandbox_design.md  rust_sandbox_task_breakdown.md  secgrad.md  secgrad.txt  security_review_checklist.md  stress_test_report.md
examples/: Readme.md
examples/01/: Makefile  README.md  danger_ptrace.c  danger_socket.c  extra.c  extra.h  main.c  memory_limit.c  timeout.c
examples/01/configs/: compile.toml  run-danger-ptrace.toml  run-danger-socket.toml  run-hello.toml  run-memory-limit.toml  run-timeout.toml
examples/01/judge-jobs/: cpp-isolated.json.in  cpp-portable.json.in  java-isolated.json.in  python-isolated.json.in  python-portable.json.in
examples/01/languages/cpp/: main.cpp
examples/01/languages/java/: Main.java
examples/01/languages/python/: solution.py
scripts/: run_regression_suite.sh  run_stress_suite.sh
