[workspace]
members = [
    "crates/sandbox-core",
    "crates/sandbox-config",
    "crates/sandbox-protocol",
    "crates/sandbox-supervisor",
    "crates/sandbox-cli",
    "crates/sandbox-cgroup",
    "crates/sandbox-mount",
    "crates/sandbox-seccomp",
    "crates/sandbox-testkit",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
toml = "1.1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

