[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
sandbox-config = { path = "../sandbox-config" }
sandbox-supervisor = { path = "../sandbox-supervisor" }
tracing.workspace = true
tracing-subscriber.workspace = true

