[package]
name = "sandbox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sandbox-cgroup = { path = "../sandbox-cgroup" }
sandbox-config = { path = "../sandbox-config" }
sandbox-core = { path = "../sandbox-core" }
sandbox-protocol = { path = "../sandbox-protocol" }
sandbox-supervisor = { path = "../sandbox-supervisor" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
