[package]
name = "sandbox-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
sandbox-config = { path = "../sandbox-config" }
sandbox-core = { path = "../sandbox-core" }
sandbox-supervisor = { path = "../sandbox-supervisor" }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tower.workspace = true
