[package]
name = "sandbox-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
sandbox-config = { path = "../sandbox-config" }
sandbox-core = { path = "../sandbox-core" }
sandbox-mount = { path = "../sandbox-mount" }
tracing.workspace = true

[dev-dependencies]
sandbox-testkit = { path = "../sandbox-testkit" }
