[package]
name = "sandbox-supervisor"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc.workspace = true
sandbox-cgroup = { path = "../sandbox-cgroup" }
sandbox-config = { path = "../sandbox-config" }
sandbox-core = { path = "../sandbox-core" }
sandbox-mount = { path = "../sandbox-mount" }
sandbox-seccomp = { path = "../sandbox-seccomp" }
tracing.workspace = true

[dev-dependencies]
sandbox-testkit = { path = "../sandbox-testkit" }
